--- a/React-0.0/src/components/Header/Header.css
+++ b/React-0.0/src/components/Header/Header.css
@@ -1,11 +1,14 @@
 .header {
   background-color: #282c34;
-  padding: 20px;
-  text-align: center;
   color: white;
   margin-bottom: 20px;
 }
 
-.header h1 {
+.header__content {
+  padding: 20px;
+  text-align: center;
+}
+
+.header__content h1 {
   margin: 0;
 }
